--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "conclave-room-serialize-rs"
-version = "0.1.0"
+name = "conclave-room-serialize"
+version = "0.0.1"
 edition = "2021"
 license = "MIT"
+description = "serialization for the conclave room protocol"
+repository = "https://github.com/piot/conclave-room-serialize-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-conclave_room = { path = "../conclave-room-rs" }
+conclave-room = "0.0.1"
 byteorder = "1.5.0"
-
