--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,13 @@
 on: [push]
 
-name: CI
+name: Rust Build
 
 jobs:
   build_and_test:
-    name: Rust project
+    name: Build and run tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --all-features --features=fail-on-warnings
+      - uses: actions/checkout@v4
+      - run: rustup install stable
+      - run: RUSTFLAGS="-D warnings" cargo build --all-features
+      - run: cargo test --verbose
