--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ repository = "https://github.com/piot/conclave-room-serialize-rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-conclave-room = "0.0.1"
+conclave-room = "0.0.2-pre01"
 byteorder = "1.5.0"
