chore: bump version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "conclave-room-serialize"
-version = "0.0.1"
+version = "0.0.2-pre01"
 edition = "2021"
 license = "MIT"
 description = "serialization for the conclave room protocol"
